--- a/cv_es.html
+++ b/cv_es.html
@@ -120,8 +120,9 @@
 
 
 <div class="container">
-  <!--<p style="text-align:center;font-variant: small-caps;"></p>-->
-<hr>
+  <hr>
+     <p style="color:#ee2523;text-align:center;font-variant:small-caps;">Buscando un trabajo</p>
+  <hr>
   <div class="row" style="text-align:center;"><div class="col-md-4">
     <a class="btn btn-secondary" href="pdf/Long_CV_tonellicueto.pdf" Labor="button" style="width:80%;">Versión PDF [Inglés]</a>
   </div><div class="col-md-4">
