--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
         <h1>Josué Tonelli&#8209;Cueto</h1>
         <h2>Mathematician</h2>
         <h3><a href="https://www.sciencesmaths-paris.fr/en/post-doctoral-laureats-298.htm">FSMP Postdoctoral Fellow</a> at the <a href="https://team.inria.fr/ouragan/">OURAGAN team</a><br/>in <a href="https://www.inria.fr/fr/centre-inria-de-paris">Inria Paris</a> and <a href="https://www.imj-prg.fr/">IMJ-PRG</a></h3>
-        <!--<h3><a href=""></a></h3>-->
+        <h4 style="color:#ee2523;font-variant: small-caps;">In the Job Market</h4>
         </center>
-        <div class="row" align="center" style="padding-top:3vw;font-size:2vw;">
+        <div class="row" align="center" style="padding-top:1vw;font-size:2vw;"><!--3vw padding top if not searching for a job-->
           <div class="col">
             <a class="btn btn-secondary" href="aboutme.html" role="button" style="width:80%;">About me</a>
           </div>
