--- a/index_es.html
+++ b/index_es.html
@@ -115,9 +115,9 @@
         <h1>Josué Tonelli Cueto</h1>
         <h2>Matemático</h2>
         <h3><a href="https://www.sciencesmaths-paris.fr/en/post-doctoral-laureats-298.htm">Reclutado Postdoctoral de la FSMP</a> en el <a href="https://team.inria.fr/ouragan/">equipo OURAGAN</a><br/>en <a href="https://www.inria.fr/fr/centre-inria-de-paris">Inria Paris</a> e <a href="https://www.imj-prg.fr/">IMJ-PRG</a></h3>
-        <!--<h3><a href=""></a></h3>-->
+        <h4 style="color:#ee2523;font-variant: small-caps;">Buscando un trabajo</h4>
         </center>
-        <div class="row" align="center" style="padding-top:3vw;font-size:2vw;">
+        <div class="row" align="center" style="padding-top:1vw;font-size:2vw;">
           <div class="col">
             <a class="btn btn-secondary" href="aboutme.html" role="button" style="width:80%;">Sobre mi</a>
           </div>
