--- a/cv.html
+++ b/cv.html
@@ -120,6 +120,8 @@
 
 <div class="container">
 <hr>
+   <p style="color:#ee2523;text-align:center;font-variant:small-caps;">In the Job Market</p>
+<hr>
   <div class="row" style="text-align:center;"><div class="col-md-4">
     <a class="btn btn-secondary" href="pdf/Long_CV_tonellicueto.pdf" role="button" style="width:80%;">PDF version</a>
   </div><div class="col-md-4">
