--- a/cv.html
+++ b/cv.html
@@ -509,7 +509,7 @@
 
       <br/><div class="cv">
       <div class="year"><h4>2021</h4></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets. II: General Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1903.10710" role="button">arXiv:1903.10710</a></h4></div>
-       <div class="pretalktitle"></div><div class="collaborator">P. Bürgisser, F. Cucker and J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. II: General Formulas, <i>Foundations of Computational Mathematics</i>. First on-line: January 2021. <span><a href="https://doi.org/10.1007/s10208-020-09483-8">DOI 10.1007/s10208-020-09483-8</a></span> <span><a style="color:#FF69B4;" href="https://rdcu.be/cc3Eq">[SharedIt LINK]</a></span></div>
+       <div class="pretalktitle"></div><div class="collaborator">P. Bürgisser, F. Cucker and J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. II: General Formulas, <i>Foundations of Computational Mathematics</i>, 21(5):1279–1316, 2021. First on-line: January 2021. <span><a href="https://doi.org/10.1007/s10208-020-09483-8">DOI 10.1007/s10208-020-09483-8</a></span> <span><a style="color:#FF69B4;" href="https://rdcu.be/cc3Eq">[SharedIt LINK]</a></span></div>
       </div>
 
       <br/><div class="cv">
@@ -568,10 +568,16 @@
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
          <br/><div class="cv">
-         <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="#SIAMAG2021">SIAM Conference on Applied Algebraic Geometry 2021</a></div>
+         <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="#BIRS2021">Workshop &ldquo;Real Polynomials: Counting and Stability&rdquo;</a></div>
+           <div class="pretalktitle"></div><div class="talktitle">Metric restrictions on the number of real zeros<!--<span style="float:right;"><a href="pdf/BIRS2021_slides.pdf">Slides</a>/ <a href="">Video</a></span>--></div>
+           <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line talk due to the COVID-19)</div>
+         </div>
+
+         <br/><div class="cv">
+         <div class="year"></div><div class="title"><h4>&emsp;<a href="#SIAMAG2021">SIAM Conference on Applied Algebraic Geometry 2021</a></div>
            <div class="pretalktitle"></div><div class="talktitle">Breaking the Curse of Infinite Average Run-Time in Numerical Real Algebraic Geometry, can the Adaptive Grid Method do the Job?<span style="float:right;"><a href="pdf/SIAM_AG21_poster_slides.pdf">Slides</a>/ <a href="https://www.youtube.com/watch?v=lS7k9y5Qsag">Video</a></span></div>
            <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(Contributed talk, submitted as poster)</div>
-           <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line poster due to the COVID-19)</div>
+           <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line talk due to the COVID-19)</div>
          </div>
 
          <br/><div class="cv">
@@ -1396,6 +1402,18 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <!-- To come
 YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
+<span id="BIRS2021"></span>
+<br/><div class="cv">
+<div class="year">
+<h4>2021</h4>
+</div><div class="title">
+<h4>&emsp;<a href="https://www.birs.ca/events/2021/5-day-workshops/21w5117">Workshop &ldquo;Real Polynomials: Counting and Stability&rdquo;</a></h4></div>
+  <div class="property">Organizer:</div><div class="value">Frédéric Bihan, Timo de Wolff, Alicia Dickenstein and Thorsten Theobald</div>
+  <div class="property">Hosting Institution:</div><div class="value"><a href="https://www.birs.ca">Banff International Research Station for Mathematical Innovation and Discovery</a></div>
+  <div class="property">Location:</div><div class="value">Casa Matemática Oaxaca, Oaxaca, Mexico (On-line por la COVID-19)</div>
+  <div class="property">Date:</div><div class="value">18th to 22nd of October of 2021</div>
+</div>
+
 <span id="SIAMAG2021"></span>
 <br/><div class="cv">
 <div class="year">
@@ -1419,25 +1437,6 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
   <div class="property">Location:</div><div class="value">Buenos Aires, Argentina (On-line due to COVID-19)</div>
   <div class="property">Date:</div><div class="value">19th to 24th of July of 2021</div>
 </div>
-
-<!--<span id="ISSAC2021"></span>
-<br/><div class="cv">
-<div class="year">
-
-</div><div class="title">
-<h4>&emsp;<a href="http://issac-conference.org/2021/">45th International Symposium on Symbolic and Algebraic Computations (ISSAC'21)</a></h4></div>
-  <div class="property">Organizer:</div><div class="value">Frédéric Chyzak (General Chairs) &ndash; <button onclick="show(2107)">Show/Hide list</button></div><div style="display:none;" id="ISSAC2021org">
-  <div class="property"></div><div class="value">George Labahn (Program Committee Chair)</div>
-  <div class="property"></div><div class="value">Nikolai Vassiliev (Local Arrangements Chair)</div>
-  <div class="property"></div><div class="value">Gleb Pogudin (Treasurer)</div>
-  <div class="property"></div><div class="value">Wei Li (Poster Chair)</div>
-  <div class="property"></div><div class="value">Marc Mezzarobba (Proceedings Editor)</div>
-  <div class="property"></div><div class="value">Daniel Robertz (Publicity Chair)</div>
-  <div class="property"></div><div class="value">Ekaterina Shemyakova (Tutorial Chair)</div>
-  <div class="property"></div><div class="value">Pascal Giorgi (Software Presentations Chair)</div></div>
-  <div class="property">Location:</div><div class="value">Saint Petersburg, Russia (On-line due to COVID-19)</div>
-  <div class="property">Date:</div><div class="value">18th to 22nd of July of 2021</div>
-</div>-->
 
 <span id="MEGA2021"></span>
 <br/><div class="cv">
