--- a/cv_es.html
+++ b/cv_es.html
@@ -492,7 +492,7 @@
 
       <br/><div class="cv">
       <div class="year"><h4>2021</h4></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets. II: General Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1903.10710" role="button">arXiv:1903.10710</a></h4></div>
-       <div class="pretalktitle"></div><div class="collaborator">P. Bürgisser, F. Cucker and J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. II: General Formulas (Inglés) [Computando la Homología de los Conjuntos Semialgebraicos. II: Fórmulas Generales], <i>Foundations of Computational Mathematics</i>. First on-line: January 2021. <span><a href="https://doi.org/10.1007/s10208-020-09483-8">DOI 10.1007/s10208-020-09483-8</a></span> <span><a style="color:#FF69B4;" href="https://rdcu.be/cc3Eq">[SharedIt LINK]</a></span></div>
+       <div class="pretalktitle"></div><div class="collaborator">P. Bürgisser, F. Cucker and J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. II: General Formulas (Inglés) [Computando la Homología de los Conjuntos Semialgebraicos. II: Fórmulas Generales], <i>Foundations of Computational Mathematics</i>, 21(5):1279–1316, 2021. First on-line: January 2021. <span><a href="https://doi.org/10.1007/s10208-020-09483-8">DOI 10.1007/s10208-020-09483-8</a></span> <span><a style="color:#FF69B4;" href="https://rdcu.be/cc3Eq">[SharedIt LINK]</a></span></div>
       </div>
 
       <br/><div class="cv">
@@ -550,6 +550,12 @@
 
       <!-- 2021
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+       <br/><div class="cv">
+       <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="#BIRS2021">Workshop &ldquo;Real Polynomials: Counting and Stability&rdquo;</a></div>
+         <div class="pretalktitle"></div><div class="talktitle">Metric restrictions on the number of real zeros<!--<span style="float:right;"><a href="pdf/BIRS2021_slides.pdf">Diapositivas</a>/ <a href="">Vídeo</a></span>--></div>
+         <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(Ponencia on-line por la COVID-19)</div>
+         </div>
 
       <br/><div class="cv">
      <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="#SIAMAG2021">SIAM Conference on Applied Algebraic Geometry 2021</a></div>
@@ -1404,10 +1410,24 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <!-- To come
 YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
-<span id="SIAMAG2021"></span>
+<span id="BIRS2021"></span>
 <br/><div class="cv">
 <div class="year">
 <h4>2021</h4>
+</div><div class="title">
+<h4>&emsp;<a href="https://www.birs.ca/events/2021/5-day-workshops/21w5117">Workshop &ldquo;Real Polynomials: Counting and Stability&rdquo;</a></h4></div>
+<div class="year"></div><div class="title">
+<h4>&ensp;&emsp;<em>(Taller &ldquo;Polinomios Reales: Conteo y Estabilidad&rdquo;)</em></h4></div>
+  <div class="property">Organizador:</div><div class="value">Frédéric Bihan, Timo de Wolff, Alicia Dickenstein y Thorsten Theobald</div>
+  <div class="property">Institución anfitriona:</div><div class="value"><a href="https://www.birs.ca">Banff International Research Station for Mathematical Innovation and Discovery</a></div>
+  <div class="property">Lugar:</div><div class="value">Casa Matemática Oaxaca, Oaxaca, México (On-line por la COVID-19)</div>
+  <div class="property">Fecha:</div><div class="value">del 18 al 22 de octubre del 2021</div>
+</div>
+
+<span id="SIAMAG2021"></span>
+<br/><div class="cv">
+<div class="year">
+
 </div><div class="title">
 <h4>&emsp;<a href="https://www.siam.org/conferences/cm/conference/ag21">SIAM Conference on Applied Algebraic Geometry 2021</a></h4></div>
 <div class="year"></div><div class="title">
