--- a/multimedia.html
+++ b/multimedia.html
@@ -398,7 +398,7 @@
      <img style="width:90%;" src="imgs/Debate1.jpg" alt="Part of the debating team of the University of the Basque Country"/>
      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2012 María Jesús Cueto Puente)</p>
      <p style="margin:0;text-align:center;padding-top:0em;">Bilbao, November 2012</p>
-     <p style="text-align:justify;font-size:small;">Together with some of the partners of the debating club of the University of the Basque Country, (left to right) Santi González, Ion Baratas, Leire Caballero and me; and my grandmother María Jesús Puente de la Peña (second from the right).</p>
+     <p style="text-align:justify;font-size:small;">Together with some of the partners of the debating club of the University of the Basque Country, (left to right) Santi González, Ion Baratas, Leire Caballero and me; and my grandmother María Jesús Puente de la Peña (second from the left).</p>
    </div>
 
    <div class="col-md-4" style="padding-top:1em;text-align:center;">
