--- a/multimedia_es.html
+++ b/multimedia_es.html
@@ -401,7 +401,7 @@
      <img style="width:90%;" src="imgs/Debate1.jpg" alt="Part of the debating team of the University of the Basque Country"/>
      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2012 María Jesús Cueto Puente)</p>
      <p style="margin:0;text-align:center;padding-top:0em;">Bilbao, November de 2012</p>
-     <p style="text-align:justify;font-size:small;">Junto a algunes compañeres del club de debate de la Universidad del País Vasco, (de izquierda a derecha) Santi González, Ion Baratas, Leire Caballero y yo; y mi abuela María Jesús Puente de la Peña (segunda por la derecha).</p>
+     <p style="text-align:justify;font-size:small;">Junto a algunes compañeres del club de debate de la Universidad del País Vasco, (de izquierda a derecha) Santi González, Ion Baratas, Leire Caballero y yo; y mi abuela María Jesús Puente de la Peña (segunda por la izquierda).</p>
    </div>
 
    <div class="col-md-4" style="padding-top:1em;text-align:center;">
