--- a/research_es.html
+++ b/research_es.html
@@ -178,7 +178,7 @@
 
   <br/><div class="cv">
   <div class="year"><h4>2021</h4></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets. II: General Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1903.10710" role="button">arXiv:1903.10710</a></h4></div>
-   <div class="pretalktitle"></div><div class="collaborator">P. Bürgisser, F. Cucker and J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. II: General Formulas (Inglés) [Computando la Homología de los Conjuntos Semialgebraicos. II: Fórmulas Generales], <i>Foundations of Computational Mathematics</i>. First on-line: January 2021. <span><a href="https://doi.org/10.1007/s10208-020-09483-8">DOI 10.1007/s10208-020-09483-8</a></span> <span><a style="color:#FF69B4;" href="https://rdcu.be/cc3Eq">[SharedIt LINK]</a></span></div>
+   <div class="pretalktitle"></div><div class="collaborator">P. Bürgisser, F. Cucker and J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. II: General Formulas (Inglés) [Computando la Homología de los Conjuntos Semialgebraicos. II: Fórmulas Generales], <i>Foundations of Computational Mathematics</i>, 21(5):1279–1316, 2021. First on-line: January 2021. <span><a href="https://doi.org/10.1007/s10208-020-09483-8">DOI 10.1007/s10208-020-09483-8</a></span> <span><a style="color:#FF69B4;" href="https://rdcu.be/cc3Eq">[SharedIt LINK]</a></span></div>
   </div>
 
   <br/><div class="cv">
