--- a/cv.html
+++ b/cv.html
@@ -568,8 +568,13 @@
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
          <br/><div class="cv">
-         <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="#BIRS2021">Workshop &ldquo;Real Polynomials: Counting and Stability&rdquo;</a></div>
-           <div class="pretalktitle"></div><div class="talktitle">Metric restrictions on the number of real zeros<!--<span style="float:right;"><a href="pdf/BIRS2021_slides.pdf">Slides</a>/ <a href="">Video</a></span>--></div>
+         <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="#SIEF2021">Jornada SIEF y Asamblea General 2021</a></div>
+           <div class="pretalktitle"></div><div class="talktitle">Reacciones químicas, polinomios y sus ceros reales<span style="float:right;"><a href="pdf/SIEF2021_slides.pdf">Slides</a><!--/ <a href="">Video</a></span>--></div>
+         </div>
+
+         <br/><div class="cv">
+         <div class="year"></div><div class="title"><h4>&emsp;<a href="#BIRS2021">Workshop &ldquo;Real Polynomials: Counting and Stability&rdquo;</a></div>
+           <div class="pretalktitle"></div><div class="talktitle">Metric restrictions on the number of real zeros<span style="float:right;"><a href="pdf/BIRS2021_slides.pdf">Slides</a>/ <a href="https://www.youtube.com/watch?v=DuDXwM2T-5A">Video</a></span></div>
            <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line talk due to the COVID-19)</div>
          </div>
 
@@ -726,7 +731,34 @@
       </div></div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="http://www.im.ufrj.br/index.php/pt/noticias-e-eventos/noticias/1771-coloquio-de-matematica-aplicada-09-07-2021">Coloquio de Matemática Aplicada del Insituto de Matemática de la UFRJ</a></h4></div>
+      <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/veranstaltungen/2021ws/kolloquium_oberseminar/">Kolloquium des Fachgebiets Algorithmische Algebra der TU Berlin</a></h4></div>
+      <div class="year"></div><div class="title"><h4>&emsp;&ensp;<em>(Seminar of the Algorithmic Algebra Group of TU Berlin)</em></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle"><a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/veranstaltungen/2021ws/kolloquium_oberseminar/#c1041234">What does the condition number of a real polynomial system tell us? Unexpected answers in the real world</a></div>
+        <div class="property">Institution:</div><div class="value"><a href="https://www.tu.berlin/">Technische Universität Berlin</a></div>
+        <div class="property">Location:</div><div class="value">Berlin, Germany</div>
+        <div class="property">Date:</div><div class="value">8th of December of 2021</div>
+      </div>
+
+      <br/><div class="cv">
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="http://www.iaa.tu-bs.de/AppliedAlgebra/AAA/">Applied Algebra and Analysis Online Seminar</a></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle">New condition-based bounds for the number of real zeros<!--<span style="float:right;"><a href="pdf/AAA2021.pdf">Slides</a>/<a href="">Video</a></span>--></div>
+        <div class="property">Institution:</div><div class="value"><a href="https://www.tu-braunschweig.de/">Technische Universität Braunschweig</a></div>
+        <div class="property"></div><div class="value"><a href="https://www.uni-osnabrueck.de/">Universität Osnabrück</a></div>
+        <div class="property">Location:</div><div class="value">Braunschweig and Osnabrück, Germany (On-line)</div>
+        <div class="property">Date:</div><div class="value">2nd of December of 2021</div>
+      </div>
+
+      <br/><div class="cv">
+      <div class="year"></div><div class="title"><h4>&emsp;Algebra Seminar of the UiT The Artic University of Norway</h4></div>
+       <div class="pretalktitle"></div><div class="talktitle">A sequel for a famous trilogy: accelerating the grid method by adaptive grids</div>
+        <div class="property">Institution:</div><div class="value"><a href="https://en.uit.no/">UiT The Artic University of Norway</a></div>
+        <div class="property">Location:</div><div class="value">Tromsø, Norway</div>
+        <div class="property">Date:</div><div class="value">28th of October of 2021</div>
+      </div>
+
+      <br/><div class="cv">
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="http://www.im.ufrj.br/index.php/pt/noticias-e-eventos/noticias/1771-coloquio-de-matematica-aplicada-09-07-2021">Coloquio de Matemática Aplicada del Insituto de Matemática de la UFRJ</a></h4></div>
+      <div class="year"></div><div class="title"><h4>&emsp;&ensp;<em>(Seminar of Applied Mathematics of the Institute of Mathematics of the UFRJ)</em></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">Finding real zeros a lot faster through an adaptive grid<span style="float:right;"><a href="pdf/coloquioUFRJ2021.pdf">Slides</a>/<a href="https://www.youtube.com/watch?v=-k98ObndRZE">Video</a></span></div>
         <div class="property">Institution:</div><div class="value"><a href="https://ufrj.br/">Universidade Federal do Rio de Janeiro</a></div>
         <div class="property">Location:</div><div class="value">Rio de Janeiro, Brasil (On-line)</div>
@@ -1298,6 +1330,17 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
          <br/><div class="cv">
          <div class="year">
+         <h4>2021</h4>
+         </div><div class="title">
+         <h4>&emsp;Research visit to <a href="https://en.uit.no/ansatte/cordian.riener">Cordian Riener</a> in Tromsø</h4></div>
+           <div class="property">Objective:</div><div class="value">Discussion for future projects</div>
+           <div class="property">Institution:</div><div class="value"><a href="https://en.uit.no/">UiT The Artic University of Norway</a></div>
+           <div class="property">Location:</div><div class="value">Tromsø, Norway</div>
+           <div class="property">Date:</div><div class="value">25th of October to the 2nd of November of 2021</div>
+         </div>
+
+         <br/><div class="cv">
+         <div class="year">
          <h4>2020</h4>
          </div><div class="title">
          <h4>&emsp;Research visit to <a href="https://www-polsys.lip6.fr/~elias/">Elias Tsigaridas</a> in Paris</h4></div>
@@ -1417,7 +1460,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <span id="SIAMAG2021"></span>
 <br/><div class="cv">
 <div class="year">
-<h4>2021</h4>
+
 </div><div class="title">
 <h4>&emsp;<a href="https://www.siam.org/conferences/cm/conference/ag21">SIAM Conference on Applied Algebraic Geometry 2021</a></h4></div>
   <div class="property">Organizer:</div><div class="value">Hal Schenck and Josephine Yu (Conference Co-Chairs)</div>
@@ -2140,6 +2183,23 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
       <h3>Other</h3>
       </div></div>
 
+      <!-- 2021
+           YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+      <span id="SIEF2021"></span>
+      <br/><div class="cv">
+      <div class="year">
+      <h4>2021</h4>
+      </div><div class="title">
+      <h4>&emsp;<a href="https://siefrancia.com/jornada-y-asamblea-general-2021/">Jornada SIEF y Asamblea General 2021</a></h4></div>
+      <div class="year"></div><div class="title">
+      <h4>&ensp;&emsp;<em>(2021 SIEF Conference and General Assembly)</em></h4></div>
+        <div class="property">Organizer:</div><div class="value"><a href="https://siefrancia.com/">Sociedad de Investigadores Españoles en Francia (SIEF)</a></div>
+        <div class="property">Hosting Institution:</div><div class="value"><a href="https://www.colesp.org/">Colegio de España en París</a></div>
+        <div class="property">Location:</div><div class="value">Paris, France</div>
+        <div class="property">Date:</div><div class="value">27th of November of 2021</div>
+      </div>
+
       <!-- 2020
            YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
@@ -2148,6 +2208,8 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
       <h4>2020</h4>
       </div><div class="title">
       <h4>&emsp;<a href="https://siefrancia.com/jornada-y-asamblea-anual-2020/">Jornada y Asamblea Anual 2020 de la SIEF</a></h4></div>
+      <div class="year"></div><div class="title">
+      <h4>&ensp;&emsp;<em>(Conference SIEF and Annual Assembly 2020)</em></h4></div>
       <div class="year"></div><div class="title">
       <h4>&ensp;&emsp;<em>(2020 Conference and Annual Assembly of the SIEF)</em></h4></div>
         <div class="property">Organizer:</div><div class="value"><a href="https://siefrancia.com/">Sociedad de Investigadores Españoles en Francia (SIEF)</a></div>
