--- a/cv_es.html
+++ b/cv_es.html
@@ -551,9 +551,14 @@
       <!-- 2021
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
+      <br/><div class="cv">
+      <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="#SIEF2021">Jornada SIEF y Asamblea General 2021</a></div>
+      <div class="pretalktitle"></div><div class="talktitle">Reacciones químicas, polinomios y sus ceros reales<span style="float:right;"><a href="pdf/SIEF2021_slides.pdf">Slides</a><!--/ <a href="">Video</a></span>--></div>
+      </div>
+
        <br/><div class="cv">
-       <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="#BIRS2021">Workshop &ldquo;Real Polynomials: Counting and Stability&rdquo;</a></div>
-         <div class="pretalktitle"></div><div class="talktitle">Metric restrictions on the number of real zeros<!--<span style="float:right;"><a href="pdf/BIRS2021_slides.pdf">Diapositivas</a>/ <a href="">Vídeo</a></span>--></div>
+       <div class="year"></div><div class="title"><h4>&emsp;<a href="#BIRS2021">Workshop &ldquo;Real Polynomials: Counting and Stability&rdquo;</a></div>
+         <div class="pretalktitle"></div><div class="talktitle">Metric restrictions on the number of real zeros<span style="float:right;"><a href="pdf/BIRS2021_slides.pdf">Diapositivas</a>/ <a href="https://www.youtube.com/watch?v=DuDXwM2T-5A">Vídeo</a></span></div>
          <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(Ponencia on-line por la COVID-19)</div>
          </div>
 
@@ -709,7 +714,35 @@
       </div></div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="http://www.im.ufrj.br/index.php/pt/noticias-e-eventos/noticias/1771-coloquio-de-matematica-aplicada-09-07-2021">Coloquio de Matemática Aplicada del Insituto de Matemática de la UFRJ</a></h4></div>
+      <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/veranstaltungen/2021ws/kolloquium_oberseminar/">Kolloquium des Fachgebiets Algorithmische Algebra der TU Berlin</a></h4></div>
+      <div class="year"></div><div class="title"><h4>&emsp;&ensp;<em>(Seminario del Grupo de Álgebra Algorítmica de la TU Berlin)</em></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle"><a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/veranstaltungen/2021ws/kolloquium_oberseminar/#c1041234">What does the condition number of a real polynomial system tell us? Unexpected answers in the real world</a></div>
+        <div class="property">Institución:</div><div class="value"><a href="https://www.tu.berlin/">Technische Universität Berlin</a></div>
+        <div class="property">Lugar:</div><div class="value">Berlín, Alemania</div>
+        <div class="property">Fecha:</div><div class="value">8 de diciembre del 2021</div>
+      </div>
+
+      <br/><div class="cv">
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="http://www.iaa.tu-bs.de/AppliedAlgebra/AAA/">Applied Algebra and Analysis Online Seminar</a></h4></div>
+      <div class="year"></div><div class="title"><h4>&emsp;&ensp;<em>(Seminario Online de Álgebra Aplicada y Análisis)</em></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle">New condition-based bounds for the number of real zeros<!--<span style="float:right;"><a href="pdf/AAA2021.pdf">Slides</a>/<a href="">Video</a></span>--></div>
+        <div class="property">Institución:</div><div class="value"><a href="https://www.tu-braunschweig.de/">Technische Universität Braunschweig</a></div>
+        <div class="property"></div><div class="value"><a href="https://www.uni-osnabrueck.de/">Universität Osnabrück</a></div>
+        <div class="property">Lugar:</div><div class="value">Braunschweig y Osnabrück, Alemania (On-line)</div>
+        <div class="property">Date:</div><div class="value">2 de diciembre del 2021</div>
+      </div>
+
+      <br/><div class="cv">
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="http://www.iaa.tu-bs.de/AppliedAlgebra/AAA/">Algebra Seminar of the UiT The Artic University of Norway</a></h4></div>
+      <div class="year"></div><div class="title"><h4>&emsp;&ensp;<em>(Seminario de Álgebra de la UiT The Artic University of Norway)</em></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle">A sequel for a famous trilogy: accelerating the grid method by adaptive grids</div>
+        <div class="property">Institución:</div><div class="value"><a href="https://en.uit.no/">UiT The Artic University of Norway</a></div>
+        <div class="property">Lugar:</div><div class="value">Tromsø, Noruega</div>
+        <div class="property">Fecha:</div><div class="value">28 de octubre del 2021</div>
+      </div>
+
+      <br/><div class="cv">
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="http://www.im.ufrj.br/index.php/pt/noticias-e-eventos/noticias/1771-coloquio-de-matematica-aplicada-09-07-2021">Coloquio de Matemática Aplicada del Insituto de Matemática de la UFRJ</a></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">Finding real zeros a lot faster through an adaptive grid<span style="float:right;"><a href="pdf/coloquioUFRJ2021.pdf">Diapositivas</a>/<a href="https://www.youtube.com/watch?v=-k98ObndRZE">Vídeo</a></span></div>
         <div class="property">Institución:</div><div class="value"><a href="https://ufrj.br/">Universidade Federal do Rio de Janeiro</a></div>
         <div class="property">Lugar:</div><div class="value">Río de Janeiro, Brasil (On-line)</div>
@@ -729,7 +762,7 @@
       <div class="year"></div><div class="title"><h4>&emsp;&ensp;<em>(Seminario del Grupo de Álgebra Algorítmica de la TU Berlin)</em></h4></div>
        <div class="pretalktitle"></div><div class="talktitle"><a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/veranstaltungen/2020ws/kolloquium_oberseminar/#c1020110">Towards Finite Expectation in the Numerical Computation of the Homology of Semialgebraic Sets</a></div>
         <div class="property">Institución:</div><div class="value"><a href="https://www.tu.berlin/">Technische Universität Berlin</a></div>
-        <div class="property">Lugar:</div><div class="value">Berlin, Alemania (On-line)</div>
+        <div class="property">Lugar:</div><div class="value">Berlín, Alemania (On-line)</div>
         <div class="property">Fecha:</div><div class="value">10 de febrero del 2021</div>
       </div>
 
@@ -1307,9 +1340,20 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
          <br/><div class="cv">
          <div class="year">
+         <h4>2021</h4>
+         </div><div class="title">
+         <h4>&emsp;Visita investigadora a <a href="https://en.uit.no/ansatte/cordian.riener">Cordian Riener</a> en Tromsø</h4></div>
+           <div class="property">Objetivo:</div><div class="value">Discusión de futuros projectos</div>
+           <div class="property">Institución:</div><div class="value"><a href="https://en.uit.no/">UiT The Artic University of Norway</a></div>
+           <div class="property">Lugar:</div><div class="value">Tromsø, Noruega</div>
+           <div class="property">Fecha:</div><div class="value">del 25 de octubre al 2 de noviembre del 2021</div>
+         </div>
+
+         <br/><div class="cv">
+         <div class="year">
          <h4>2020</h4>
          </div><div class="title">
-         <h4>&emsp;Visita investigadora a <a href="https://www-polsys.lip6.fr/~elias/">Elias Tsigaridas</a> in Paris</h4></div>
+         <h4>&emsp;Visita investigadora a <a href="https://www-polsys.lip6.fr/~elias/">Elias Tsigaridas</a> en París</h4></div>
            <div class="property">Objetivo:</div><div class="value">Discusión de futuros projectos</div>
            <div class="property">Institución:</div><div class="value"><a href="https://team.inria.fr/ouragan/">OURAGAN (Outils de Résolution Algébriques pour la Géométrie et ses ApplicatioNs)</a></div>
            <div class="property">Lugar:</div><div class="value">París, Francia</div>
@@ -1576,7 +1620,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <h4>&ensp;&emsp;<em>(Conferencia de Hitos del Semestre Temático Einstein en Geometría Algebraica)</em></h4></div>
   <div class="property">Organizador:</div><div class="value">Matías Bender y Peter B&uuml;rgisser</div>
   <div class="property">Institución anfitriona:</div><div class="value"><a href="https://www.zib.de/">Zuse Institut Berlin</a></div>
-  <div class="property">Lugar:</div><div class="value">Berlin, Alemania</div>
+  <div class="property">Lugar:</div><div class="value">Berlín, Alemania</div>
   <div class="property">Fecha:</div><div class="value">del 27 al 28 de febrero del 2020</div>
 </div>
 
@@ -2237,6 +2281,21 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
       <br/><div class="row"><div class="col-md-12">
       <h3>Otras</h3>
       </div></div>
+
+      <!-- 2021
+           YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+      <span id="SIEF2021"></span>
+      <br/><div class="cv">
+      <div class="year">
+      <h4>2021</h4>
+      </div><div class="title">
+      <h4>&emsp;<a href="https://siefrancia.com/jornada-y-asamblea-general-2021/">Jornada SIEF y Asamblea General 2021</a></h4></div>
+        <div class="property">Organizador:</div><div class="value"><a href="https://siefrancia.com/">Sociedad de Investigadores Españoles en Francia (SIEF)</a></div>
+        <div class="property">Institución anfitriona:</div><div class="value"><a href="https://www.colesp.org/">Colegio de España en París</a></div>
+        <div class="property">Lugar:</div><div class="value">París, Francia</div>
+        <div class="property">Fecha:</div><div class="value">27 de noviembre del 2021</div>
+      </div>
 
 <!-- 2020
      YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
