--- a/cv.html
+++ b/cv.html
@@ -741,7 +741,7 @@
 
       <br/><div class="cv">
       <div class="year"></div><div class="title"><h4>&emsp;<a href="http://www.iaa.tu-bs.de/AppliedAlgebra/AAA/">Applied Algebra and Analysis Online Seminar</a></h4></div>
-       <div class="pretalktitle"></div><div class="talktitle">New condition-based bounds for the number of real zeros<!--<span style="float:right;"><a href="pdf/AAA2021.pdf">Slides</a>/<a href="">Video</a></span>--></div>
+       <div class="pretalktitle"></div><div class="talktitle">New condition-based bounds for the number of real zeros<span style="float:right;"><a href="pdf/AAA2021_slides.pdf">Slides</a></span></div>
         <div class="property">Institution:</div><div class="value"><a href="https://www.tu-braunschweig.de/">Technische Universität Braunschweig</a></div>
         <div class="property"></div><div class="value"><a href="https://www.uni-osnabrueck.de/">Universität Osnabrück</a></div>
         <div class="property">Location:</div><div class="value">Braunschweig and Osnabrück, Germany (On-line)</div>
