--- a/cv_es.html
+++ b/cv_es.html
@@ -725,7 +725,7 @@
       <br/><div class="cv">
       <div class="year"></div><div class="title"><h4>&emsp;<a href="http://www.iaa.tu-bs.de/AppliedAlgebra/AAA/">Applied Algebra and Analysis Online Seminar</a></h4></div>
       <div class="year"></div><div class="title"><h4>&emsp;&ensp;<em>(Seminario Online de Álgebra Aplicada y Análisis)</em></h4></div>
-       <div class="pretalktitle"></div><div class="talktitle">New condition-based bounds for the number of real zeros<!--<span style="float:right;"><a href="pdf/AAA2021.pdf">Slides</a>/<a href="">Video</a></span>--></div>
+       <div class="pretalktitle"></div><div class="talktitle">New condition-based bounds for the number of real zeros<span style="float:right;"><a href="pdf/AAA2021_slides.pdf">Slides</a></span></div>
         <div class="property">Institución:</div><div class="value"><a href="https://www.tu-braunschweig.de/">Technische Universität Braunschweig</a></div>
         <div class="property"></div><div class="value"><a href="https://www.uni-osnabrueck.de/">Universität Osnabrück</a></div>
         <div class="property">Lugar:</div><div class="value">Braunschweig y Osnabrück, Alemania (On-line)</div>
