--- a/contact_es.html
+++ b/contact_es.html
@@ -40,7 +40,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="blog/">Blog</a>
+            <a class="nav-link" href="https://illsaidthoughts.xyz/">Blog</a>
           </li>
 
 	  <li class="nav-item">
@@ -131,7 +131,7 @@ TOBEUPDATED (teléfono)
 <br/>
 <a href="https://twitter.com/tonellicueto" class="fa fa-twitter"></a>&ensp;<a href="https://twitter.com/tonellicueto" style="color:#55ACEE;font-variant:normal;font-style:normal;font-size: 1em;">@tonellicueto</a>
 <br/>
-<a href="blog/" class="fa fa-bold"></a>&ensp;<a href="blog/" style="color:#ee2523;font-variant:small-caps;font-style:normal;font-size: 1em;">Ill-posed thoughts</a>
+<a href="https://illsaidthoughts.xyz/" class="fa fa-bold"></a>&ensp;<a href="https://illsaidthoughts.xyz/" style="color:#ee2523;font-variant:small-caps;font-style:normal;font-size: 1em;">Ill-posed thoughts</a>
 
   </div>
  </div>
