--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="blog/">Blog</a>
+            <a class="nav-link" href="https://illsaidthoughts.xyz/">Blog</a>
           </li>
 
 	  <li class="nav-item">
@@ -124,7 +124,7 @@
             <a class="btn btn-secondary" href="aboutme.html" role="button" style="width:80%;">About me</a>
           </div>
           <div class="col">
-            <a class="btn btn-secondary" href="blog/" role="button" style="width:80%;">Blog</a>
+            <a class="btn btn-secondary" href="https://illsaidthoughts.xyz/" role="button" style="width:80%;">Blog</a>
           </div>
       </div>
       <div class="row" align="center" style="padding-top:2vw;font-size:2vw;">
