--- a/multimedia_es.html
+++ b/multimedia_es.html
@@ -39,7 +39,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="blog/">Blog</a>
+            <a class="nav-link" href="https://illsaidthoughts.xyz/">Blog</a>
           </li>
 
 	  <li class="nav-item">
