--- a/non-research.html
+++ b/non-research.html
@@ -41,7 +41,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="blog/">Blog</a>
+            <a class="nav-link" href="https://illsaidthoughts.xyz/">Blog</a>
           </li>
 
 	  <li class="nav-item">
