--- a/cv.html
+++ b/cv.html
@@ -1035,7 +1035,21 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
       <h2 class="display-4">Teaching</h2>
       </div></div>
 
-    <!-- 2014
+      <!-- 2021
+           YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+          <br/><div class="cv">
+          <div class="year">
+          <h4>2021</h4>
+          </div><div class="title">
+          <h4>&emsp;3rd year Bachelor Research Project<br/>&ldquo;Topological Data Analysis in Computational Real Algebraic Geometry&rdquo;</h4></div>
+            <div class="property">Role:</div><div class="value">Superviser together with Elias Tsigaridas</div>
+            <div class="property">Supervised student:</div><div class="value">Aurèle Bohbot</div>
+            <div class="property">Institution:</div><div class="value"><a href="https://www.polytechnique.edu/">École polytechnique</a></div>
+            <div class="property">Date:</div><div class="value">October of 2021 - December of 2021</div>
+          </div>
+
+    <!-- 2018
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
         <br/><div class="cv">
