--- a/cv_es.html
+++ b/cv_es.html
@@ -1037,7 +1037,23 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
       <h2 class="display-4">Enseñanza</h2>
       </div></div>
 
-    <!-- 2014
+      <!-- 2021
+           YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+          <br/><div class="cv">
+          <div class="year">
+          <h4>2021</h4>
+          </div><div class="title">
+          <h4>&emsp;3rd year Bachelor Research Project<br/>&ldquo;Topological Data Analysis in Computational Real Algebraic Geometry&rdquo;</h4></div>
+          <div class="year"></div><div class="title">
+          <h4>&ensp;&emsp;<em>(Proyecto de Grado de 3.º Año<br/>&ensp;&ldquo;Análisis Topológico de Datos en Geometría Algebraica Real Computacional&rdquo;)</em></h4></div>
+            <div class="property">Labor:</div><div class="value">Superviser together with Elias Tsigaridas</div>
+            <div class="property">Estudiante supervisade:</div><div class="value">Aurèle Bohbot</div>
+            <div class="property">Institución:</div><div class="value"><a href="https://www.polytechnique.edu/">École polytechnique</a></div>
+            <div class="property">Fecha:</div><div class="value">octubre del 2021 - diciembre del 2021</div>
+          </div>
+
+    <!-- 2018
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
         <br/><div class="cv">
